# Bomberman

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  main.cpp
.github/workflows/: build.yml  build_and_mirror.yml  format.yml  mirror.yml
assets/objects/Bomb/: bomb.mtl
assets/objects/Bullet/: bullet.mtl
assets/objects/Charger/: charger.mtl
assets/objects/Tnt/: tnt.mtl
cmake/: Findraylib.cmake
doc/: warnings.txt
ecs/: main.cpp
ecs/component/: Component.hpp
ecs/entity/: Entity.cpp  Entity.hpp
ecs/raylib/: Raylib.cpp  Raylib.hpp
ecs/system/: System.hpp
include/: Colors.hpp  MyRaylib.hpp  RColor.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  events.hpp  test.hpp  types.hpp
meetings/: 09-05-22_17-30.md  12-05-22_10-20.md  18-05-22_10-10.md  24-05-22_11-00.md  26-05-22_10-45.md
src/: CMakeLists.txt  MapGenerator.cpp  main.cpp
src/Game/: Game.cpp  Game.hpp
src/Map/: MapGenerator.cpp  MapGenerator.hpp
src/Screens/: IScreen.hpp
src/Screens/GameScreen/: GameScreen.cpp
src/Screens/MenuScreen/: MenuScreen.cpp  MenuScreen.hpp
src/Screens/game/: GameScreen.cpp  GameScreen.hpp
src/ecs/: CMakeLists.txt  README.md
src/ecs/component/: CMakeLists.txt  Circle.cpp  Component.hpp  Drawable.cpp  IComponent.hpp  Player.cpp  Rectangle.cpp  Text.cpp  Transform.cpp  Wall.cpp
src/ecs/component/Alive/: Alive.cpp  Alive.hpp
src/ecs/component/Collectable/: Collectable.cpp  Collectable.hpp
src/ecs/component/Collide/: Collide.cpp  Collide.hpp
src/ecs/component/Destroyable/: Destroyable.cpp  Destroyable.hpp
src/ecs/component/Drawable/: Drawable2D.cpp  Drawable2D.hpp  Drawable3D.cpp  Drawable3D.hpp
src/ecs/component/Drawable2D/: Drawable2D.cpp  Drawable2D.hpp
src/ecs/component/Drawable3D/: Drawable3D.cpp  Drawable3D.hpp
src/ecs/component/Explodable/: Explodable.cpp  Explodable.hpp
src/ecs/component/Inventory/: Inventory.cpp  Inventory.hpp
src/ecs/component/Object/: Object.cpp  Object.hpp
src/ecs/component/Sound/: Sound.cpp  Sound.hpp
src/ecs/component/Transform/: Transform.cpp  Transform.hpp
src/ecs/entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/ecs/raylib/: CMakeLists.txt  Camera3D.cpp  Camera3D.hpp  Cube.cpp  Cube.hpp  Draw.cpp  Draw.hpp  Event.hpp  Raylib.cpp  Raylib.hpp  Rectangle.cpp  Rectangle.hpp  Sound.cpp  Sound.hpp  Sphere.hpp  Window.hpp
src/ecs/system/: CMakeLists.txt  ISystem.hpp  System.cpp  System.hpp
src/ecs/system/Collide/: Collide.cpp  Collide.hpp
src/ecs/system/Draw2D/: Draw2D.cpp  Draw2D.hpp
src/ecs/system/Draw3D/: Draw3D.cpp  Draw3D.hpp
src/ecs/system/Explodable/: Explodable.cpp  Explodable.hpp
src/ecs/system/Movement/: Movement.cpp  Movement.hpp
src/ecs/system/Object/: Object.cpp  Object.hpp
src/ecs/system/Sound/: Sound.cpp  Sound.hpp
src/ecs/world/: World.cpp  World.hpp
src/events/: Events.cpp  Events.hpp
src/game/: Game.cpp  Game.hpp
src/gameEvents/: GameEvents.cpp  GameEvents.hpp
src/map/: MapGenerator.cpp  MapGenerator.hpp
src/player/: Player.cpp  Player.hpp
src/raylib/: Cube.hpp  Draw.cpp  Event.cpp  Raylib.cpp  Raylib.hpp  Rectangle.hpp  Sound.cpp  Sphere.cpp  Sphere.hpp  Window.cpp
src/raylib/boundingbox/: BoundingBox.cpp  BoundingBox.hpp
src/raylib/camera3d/: Camera3D.cpp  Camera3D.hpp
src/raylib/circle/: Circle.cpp  Circle.hpp
src/raylib/cube/: Cube.cpp  Cube.hpp
src/raylib/cylinder/: Cylinder.cpp  Cylinder.hpp
src/raylib/draw/: Draw.cpp  Draw.hpp
src/raylib/event/: Event.cpp  Event.hpp
src/raylib/line/: Line.cpp  Line.hpp
src/raylib/model/: Model.cpp  Model.hpp
src/raylib/music/: Music.cpp  Music.hpp
src/raylib/pixel/: Pixel.cpp  Pixel.hpp
src/raylib/rectangle/: Rectangle.cpp  Rectangle.hpp
src/raylib/sound/: Sound.cpp  Sound.hpp
src/raylib/sphere/: Sphere.cpp  Sphere.hpp
src/raylib/texture2d/: Texture2D.cpp  Texture2D.hpp
src/raylib/triangle/: Triangle.cpp  Triangle.hpp
src/raylib/window/: Window.cpp  Window.hpp
src/screens/: IScreen.hpp
src/screens/end/: EndScreen.cpp  EndScreen.hpp
src/screens/game/: GameScreen.cpp  GameScreen.hpp
src/screens/game/uiPlayerDisplay/: UIPlayerDisplay.cpp  UIPlayerDisplay.hpp
src/screens/game_options/: GameOptionsScreen.cpp  GameOptionsScreen.hpp
src/screens/menu/: MenuScreen.cpp  MenuScreen.hpp
src/screens/options/: OptionsScreen.cpp  OptionsScreen.hpp
src/screens/pre_menu/: PreMenuScreen.cpp  PreMenuScreen.hpp
src/screens/set_fps/: SetFpsScreen.cpp  SetFpsScreen.hpp
src/screens/set_music/: SetMusicScreen.cpp  SetMusicScreen.hpp
src/screens/set_sound/: SetSoundScreen.cpp  SetSoundScreen.hpp
src/tools/: Tools.cpp  Tools.hpp
